# deep-research

./: .cspell.json  .gitignore  llm-agentic-blocks.txt  llm-pocketflow.txt  pyproject.toml
notebooks/: agent.ipynb  research_agent.ipynb  research_supervisor.ipynb  router.ipynb  simple_graph.ipynb  subagent.ipynb
src/deep_research/: prompts.py  tool_descriptions.py  tools.py
